plugins {
    id 'java'
    id 'idea'
    id 'application'
    id 'io.ratpack.ratpack-java' version '1.8.0'
}

group 'org.fpeterek'
version '0.1'

targetCompatibility = '14'
sourceCompatibility = '14'


repositories {
    mavenCentral()
    mavenLocal()
    jcenter()
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
    implementation 'joda-time:joda-time:2.10.8'
    implementation 'org.postgresql:postgresql:42.2.12'
    implementation 'org.json:json:20200518'
    implementation 'io.prometheus:simpleclient:0.6.0'
    implementation 'io.prometheus:simpleclient_httpserver:0.6.0'
    implementation 'org.fpeterek.flightlidar48.database:database:1.0'
    // compile 'org.slf4j:slf4j-simple:1.7.30'
}

compileJava {
    options.compilerArgs += ['--enable-preview']
}

tasks.withType(JavaCompile).each {
    it.options.compilerArgs += '--enable-preview'
}

tasks.withType(Test).all {
    jvmArgs += '--enable-preview'
}

tasks.withType(JavaExec) {
    jvmArgs += '--enable-preview'
}

mainClassName = 'org.fpeterek.flightlidar48.Main'

jar {
    manifest {
        attributes 'Main-Class': 'org.fpeterek.flightlidar48.Main'
    }
    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
}
